--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,97 @@
-name: Deploy to GitHub Pages
+name: Build and Deploy to GitHub Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches:
-      - main
+    branches: ["main"]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v3
-        
+      
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: 'npm'
       
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
+      - name: Install dependencies
+        run: |
+          npm install -g npm@latest
+          npm ci
       
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Build
+        run: |
+          # Create a build directory
+          mkdir -p build
+          
+          # Copy static files
+          cp -r citation-chat/* build/
+          
+          # Create a root index.html that redirects to the citation-chat
+          cat > build/index.html << 'EOF'
+          <!DOCTYPE html>
+          <html lang="en">
+          <head>
+              <meta charset="UTF-8">
+              <meta name="viewport" content="width=device-width, initial-scale=1.0">
+              <meta http-equiv="refresh" content="0; url=index.html">
+              <title>Redirecting to Citation Chat</title>
+              <style>
+                  body {
+                      font-family: Arial, sans-serif;
+                      text-align: center;
+                      padding: 40px;
+                      line-height: 1.6;
+                  }
+                  .container {
+                      max-width: 600px;
+                      margin: 0 auto;
+                  }
+                  h1 {
+                      color: #2196f3;
+                  }
+              </style>
+          </head>
+          <body>
+              <div class="container">
+                  <h1>Citation Chat</h1>
+                  <p>Redirecting to the Citation Chat application...</p>
+                  <p>If you are not redirected automatically, <a href="index.html">click here</a>.</p>
+              </div>
+          </body>
+          </html>
+          EOF
+      
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          folder: .
-          branch: gh-pages 
+          path: './build'
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2 
