--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,12 +30,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: 'npm'
       
       - name: Install dependencies
         run: |
           npm install -g npm@latest
-          npm ci
+          npm install
       
       - name: Build
         run: |
